--- a/src/components/LoadingScreen.css
+++ b/src/components/LoadingScreen.css
@@ -8,57 +8,49 @@ html, body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .container {
   position: relative;
 }
 
-.container img:first-child {
-  /* z-index: -1; */
-}
-
 .eye {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
 }
 
 .roll {
-  animation: roll ease 5s infinite;
+  animation: roll 5s ease 0.3s infinite;
 }
 
 @keyframes roll {
   0% { 
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    transform: translate(0%, 0%);
   }
   25% {
-    transform: translate(-70%, -40%);
-    -webkit-transform: translate(-70%, -40%);
+    transform: translate(-15%, -15%);
   }
   50% {
-    transform: translate(-30%, -40%);
-    -webkit-transform: translate(-30%, -40%);
+    transform: translate(-15%, 15%);
   }
   75% {
-    transform: translate(-30%, -60%);
-    -webkit-transform: translate(-30%, -60%);
+    transform: translate(15%, 15%);
   }
   100% 
-    { transform: translate(-50%, -50%);
-      -webkit-transform: translate(-50%, -50%);
+    { 
+      transform: translate(0%, 0%);
     }
 }
 
 .loading {
-  font-family: Comic Sans MS;
+  font-family: monospace;
   font-size: 24px;
   font-weight: bold;
   text-align: center;
-  margin-top: 150px;
+  margin-top: 330px;
 }
 
 .loading::after {
