--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,6 +1,5 @@
 .home {
-  height: 100vh;
-  background-color: green;
+  height: 500px;
   width: 100vw;
   background: linear-gradient(180deg, #258F8C 0%, #CBEDD5 100%);
   mix-blend-mode: normal;
