--- a/src/components/NavProgress.module.css
+++ b/src/components/NavProgress.module.css
@@ -38,17 +38,10 @@
     width: auto;
 }
   
-  a {
-    text-decoration: none;
-    display: block;
-  }
-.progressStep img{
+.progressBar > li img{
     width: 15px;
 }
-.progressbar {
-    counter-reset: step;
-}
-.progressStep {
+.progressBar > li {
     list-style-type: none;
     width: 14%;
     float: left;
@@ -58,7 +51,7 @@
     text-transform: uppercase;
     color: #7d7d7d;
 }
-.progressStep:before {
+.progressBar > li::before {
     width: 30px;
     height: 30px;
     content: '';
@@ -70,9 +63,9 @@
     border-radius: 50%;
     background-color: white;
 }
-.progressStep:after {
+.progressBar > li::after {
     width: 100%;
-    height: 2px;
+    height: 5px;
     content: '';
     position: absolute;
     background-color: #7d7d7d;
@@ -80,20 +73,39 @@
     left: -50%;
     z-index: -1;
 }
-.progressStep:first-child:after {
+.progressBar > li:first-child::after {
     content: none;
 }
-li.active:before {
+.progressBar > li.active::before {
     border-color: #e2edff;
     border-width: 2px;
 }
-li.active + li:after {
+.progressBar > li.active::after {
     background-color: #e2edff;
 }
 
-li.active:nth-child(2):before {
-    background: url('../assets/icons/magnify.svg');
-    background-repeat: no-repeat;
-    background-position: center; 
-    background-color: white;
-  }
+
+.progressBar > li.last::before {
+    background-repeat: no-repeat !important;
+    background-position: center !important; 
+    background-color: white !important;
+}
+
+.progressBar > li:nth-child(1).last::before {
+    background: url('../assets/icons/Home.svg');
+}
+
+.progressBar > li:nth-child(2).last::before {
+    background: url('../assets/icons/Person.svg');
+}
+
+.progressBar > li:nth-child(3).last::before {
+    background: url('../assets/icons/Phone.svg');
+}
+
+.progressBar > li:nth-child(4).last::before {
+    background: url('../assets/icons/Mail.svg');
+}
+.progressBar > li:nth-child(5).last::before {
+    background: url('../assets/icons/Magnify.svg');
+}
