--- a/src/components/NavProgress.module.css
+++ b/src/components/NavProgress.module.css
@@ -62,6 +62,7 @@
     margin: 0 auto 10px auto;
     border-radius: 50%;
     background-color: white;
+    transition: border-color 0.3s ease-in-out;
 }
 .progressBar > li::after {
     width: 100%;
@@ -72,6 +73,7 @@
     top: 15px;
     left: -50%;
     z-index: -1;
+    transition: background-color 0.3s ease-in-out;
 }
 .progressBar > li:first-child::after {
     content: none;
