--- a/src/components/NavProgress.module.css
+++ b/src/components/NavProgress.module.css
@@ -1,14 +1,14 @@
-.NavDiv { 
+.NavDiv {
     top: 0;
     position: sticky;
     position: -webkit-sticky;
     z-index: 1;
     height: 70px;
     margin: 0;
-    width: "100%" ;
+    width: "100%";
     background-color: #62b6b7;
     padding: 8px;
-    
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -27,7 +27,7 @@
 
 .NavIcon {
     top: 50%;
-    max-height:100%;
+    max-height: 100%;
 }
 
 .NavProgress {
@@ -37,11 +37,12 @@
 .container {
     width: auto;
 }
-  
-.progressBar > li img{
+
+.progressBar>li img {
     width: 15px;
 }
-.progressBar > li {
+
+.progressBar>li {
     list-style-type: none;
     width: 14%;
     float: left;
@@ -51,7 +52,8 @@
     text-transform: uppercase;
     color: #7d7d7d;
 }
-.progressBar > li::before {
+
+.progressBar>li::before {
     width: 30px;
     height: 30px;
     content: '';
@@ -64,7 +66,8 @@
     background-color: white;
     transition: border-color 0.3s ease-in-out;
 }
-.progressBar > li::after {
+
+.progressBar>li::after {
     width: 100%;
     height: 5px;
     content: '';
@@ -75,39 +78,47 @@
     z-index: -1;
     transition: background-color 0.3s ease-in-out;
 }
-.progressBar > li:first-child::after {
+
+.progressBar>li:first-child::after {
     content: none;
 }
-.progressBar > li.active::before {
+
+.progressBar>li.active::before {
     border-color: #e2edff;
     border-width: 2px;
 }
-.progressBar > li.active::after {
+
+.progressBar>li.active::after {
     background-color: #e2edff;
 }
 
 
-.progressBar > li.last::before {
+.progressBar>li.last::before {
     background-repeat: no-repeat !important;
-    background-position: center !important; 
+    background-position: center !important;
     background-color: white !important;
 }
 
-.progressBar > li:nth-child(1).last::before {
+.progressBar>li:nth-child(1).last::before {
     background: url('../assets/icons/Home.svg');
 }
 
-.progressBar > li:nth-child(2).last::before {
+.progressBar>li:nth-child(2).last::before {
     background: url('../assets/icons/Person.svg');
 }
 
-.progressBar > li:nth-child(3).last::before {
+.progressBar>li:nth-child(3).last::before {
     background: url('../assets/icons/Phone.svg');
 }
 
-.progressBar > li:nth-child(4).last::before {
+.progressBar>li:nth-child(4).last::before {
     background: url('../assets/icons/Mail.svg');
 }
-.progressBar > li:nth-child(5).last::before {
+
+.progressBar>li:nth-child(5).last::before {
+    background: url('../assets/icons/Magnify.svg');
+}
+
+.progressBar>li:nth-child(6).last::before {
     background: url('../assets/icons/Magnify.svg');
 }
