--- a/src/components/WorkedWith.module.css
+++ b/src/components/WorkedWith.module.css
@@ -7,6 +7,11 @@
   align-items: center;
 }
 
+.titleDiv {
+  display: flex;
+  flex-direction: column;
+}
+
 .workedWith span {
   color: #000;
   text-align: center;
@@ -37,7 +42,7 @@
   color: #000;
   text-align: center;
   font-family: Arya;
-  font-size: 20px;
+  font-size: min(30px, 5vw);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
