--- a/src/components/ContactUs.module.css
+++ b/src/components/ContactUs.module.css
@@ -19,7 +19,7 @@
   font-family: Arya;
   font-size: 40px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   line-height: normal;
 }
 
@@ -29,8 +29,42 @@
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  height: 70%;
 }
 
+.contactCols{
+  display: flex;
+  flex-direction: column;
+  background-color: #D9D9D9;  
+  width:30%;
+  height: 100%;
+}
+.contactForm{
+  border-radius: 10px;
+  margin-bottom: 5px;
+  height:15%;
+  color: white;
+  background-color: #62B6B7;
+  width: 90%;
+  font-size: 18px;
+  padding-top: 15px;
+  padding-bottom: 0;
+ 
+ 
+}
+.contactSubmit{
+  border-radius: 10px;
+ margin-top: 40px;
+ justify-content: center;
+  height: 15%;
+  color: white;
+  width: 90%;
+  background-color: #258F8C;
+  font-size: 18px;
+  
+}
 .desktopDiv img {
   width: 150px;
 }
@@ -70,4 +104,14 @@
   width: 100%;
   cursor: pointer;
   /* background-color: #62B6B7; */
+}
+
+textarea::placeholder {
+  color: white;
+  padding:5px;
+  align-self: center;
+  justify-self: center;
+}
+textarea:focus::placeholder {
+  color: transparent;
 }
