--- a/src/components/WorkedWith.module.css
+++ b/src/components/WorkedWith.module.css
@@ -5,6 +5,7 @@
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
+  margin-top: 200px;
 }
 
 .titleDiv {
@@ -26,7 +27,8 @@
   display: flex;
   flex-direction: row;
   gap: 50px;
-  align-items: baseline;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageDiv div {
@@ -37,13 +39,22 @@
 .imageDiv img {
   width: 30vw;
 }
-
+.imageCols{
+  justify-content: center;
+  align-items: center;
+  background-color: #D9D9D9;
+  height:100%;
+  width:60%;
+  position: relative;
+}
 .imageDiv span {
   color: #000;
-  text-align: center;
   font-family: Arya;
   font-size: min(30px, 5vw);
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   line-height: normal;
+  align-self: center;
+  position: absolute;
+  bottom: 0px;
 }
