--- a/src/components/NavProgress.module.css
+++ b/src/components/NavProgress.module.css
@@ -37,6 +37,20 @@
 
 }
 
+.sidebarLabels{
+
+position:absolute;
+top:25%;
+left:25%;
+width: 50%;
+display: flex;
+flex-direction: column;
+align-items: start;
+}
+.sidebarLabels>h2:hover{
+text-decoration: underline;
+}
+
 .container {
     width: fit-content;
     align-items: center;
